Signup feature with Jwt is done.